--- a/ex022/fundo005.html
+++ b/ex022/fundo005.html
@@ -7,12 +7,8 @@
     <title>Posicionamento</title>
     <style>
         body{
-            height: 98vh;
-            border: 1px dashed black;
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px;
-            background-repeat: no-repeat;
-            background-position: top center;
+            background-image: url('imagens/wallpaper003.jpg');
+            background-position: left top;
         }
     </style>
 </head>
