--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -7,16 +7,12 @@
     <title>Fundo Fixo de Tela</title>
     <style>
         body{
-            height: 90vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            height: 98vh;
+            background: black url('imagens/wallpaper002.jpg')  center center / cover no-repeat fixed ;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width:400px;
             padding:10px;
             margin: auto;
             border: 2px solid blueviolet;
