--- a/desafio012/index.html
+++ b/desafio012/index.html
@@ -27,7 +27,7 @@
                 Vou dizer tudo em poesia.
             </p>
         </section>
-        <section class="imagem">
+        <section class="imagem" id="img">
             <p>
                 Não é mais como era antes<br>
                 É tudo abreviado<br>
@@ -59,7 +59,7 @@
                 Decifre esse rabisco.
             </p>
         </section>
-        <section class="imagem">
+        <section class="imagem" id="img2">
             <p>
                 Tenho saudade das cartas<br>
                 Escritas com a própria mão<br>
@@ -93,7 +93,7 @@
 
         <footer>
             <p>
-            Site criado por <a href="">Rafaela Moreira
+            Site criado por <a href="https://github.com/rafaelaetec">Rafaela Moreira
             </p>
             </a></footer>
         </body>
